--- a/rulebooks/podrestart.yml
+++ b/rulebooks/podrestart.yml
@@ -10,5 +10,6 @@
     - name: Detectar pod en estado de error
       condition: event.object.status.phase in ["Failed", "CrashLoopBackOff"]
       action:
-        run_playbook:
-          name: alertar_pod_caido.yml  # Playbook que envía una alerta o toma acción
+        run_job_template:
+          name: podrestart
+          organization: Default
