--- a/rulebooks/podrestart.yml
+++ b/rulebooks/podrestart.yml
@@ -10,7 +10,8 @@
   rules:
     - name: Detectar pod en estado de error
       condition: >
-        any(resource.status.phase in ['Failed', 'CrashLoopBackOff'] for resource in event.resources)
+        event.resources and 
+        len([r for r in event.resources if r.status.phase in ['Failed', 'CrashLoopBackOff']]) > 0
       action:
         run_job_template:
           name: os-test
