--- a/rulebooks/test-os.yml
+++ b/rulebooks/test-os.yml
@@ -1,14 +1,21 @@
 ---
-- name: Check OS Version Rulebook
+- name: Comprobar disponibilidad de una página web
   hosts: localhost
   sources:
-    - name: Listen for OS Check Requests
-      ansible.eda.range:
-        limit: 10
+    - ansible.eda.url_check:
+        urls:
+          - "http://192.168.6.70:32032/"
+        delay: 10  # Revisa cada 30 segundos
+ 
   rules:
-    - name: Get OS Version
-      condition: event.meta is defined
+    - name: Página web disponible
+      condition: event.status == 200
       action:
         run_job_template:
-          name: os-test
-          organization: Default
+          name: disponible
+ 
+    - name: Página web caída
+      condition: event.status != 200
+      action:
+        run_job_template:
+          name: fallo
