--- a/rulebooks/test-os.yml
+++ b/rulebooks/test-os.yml
@@ -13,9 +13,11 @@
       action:
         run_job_template:
           name: disponible
+          organization: Default
  
     - name: Página web caída
       condition: event.status != 200
       action:
         run_job_template:
           name: fallo
+          organization: Default
