--- a/rulebooks/test-os.yml
+++ b/rulebooks/test-os.yml
@@ -5,6 +5,7 @@
     - ansible.eda.url_check:
         urls:
           - "http://192.168.6.70:32032/"
+          delay: 15
  
   rules:
     - name: Página web disponible
