--- a/rulebooks/test-os.yml
+++ b/rulebooks/test-os.yml
@@ -6,6 +6,7 @@
         urls:
           - "http://192.168.6.70:32032/"
         repeat: true
+        delay: 30
  
   rules:
     - name: Página web disponible
